--- a/styleCard.css
+++ b/styleCard.css
@@ -3,25 +3,74 @@ body {
   display: flex;
   align-items: center; /*水平制中*/
   justify-content: center; /*垂直制中*/
-  background-image: url("../wen_shen_test_package/image/background.png");/*背景圖片*/
-background-size: cover;/*調整大小當圖片過小時，用cover去做調整*/
+  background-image: url("../wen_shen_test_package/image/background.png"); /*背景圖片*/
+  background-size: cover; /*調整大小當圖片過小時，用cover去做調整*/
+  height: 100vh;
 }
 .main-content {
   text-align: center;
   box-shadow: 0 0 10px #00000070; /*圖片底下的陰影*/
 }
 
-.top-section
-{
-background-color: #575fcf;
-padding: 50px 0 50px 0;
-color: #ecf0f1;
-
+.top-section {
+  background-color: #575fcf;
+  padding: 50px 0 50px 0;
+  color: #ecf0f1;
 }
-.top-section img 
-{
-    
-    width: 50%;
-    border-radius: 50%;
+.top-section img {
+  width: 50%;
+  border-radius: 50%;
+}
 
+.top-section p {
+  margin: 10px 0 5px 0;
+}
+.top-section .name {
+  font-size: 30px;
+  text-transform: uppercase; /*轉換成大寫*/
+  margin-top: 20px; /*拉寬名子跟頭像的距離*/
+}
+.top-section .email,
+.mobile {
+  font-size: 18px;
+}
+.middle-section,
+.bottom-section {
+  background-color: #ffffff;
+}
+.middle-section {
+  position: relative;
+}
+
+.social {
+  position: absolute;
+  width: 100%;
+  top: -50px;
+}
+
+.social i {
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  color: #ffffff;
+  background-color: #2c3e50;
+  border-radius: 50%;
+  line-height: 50px;
+  margin: 20px;
+}
+.bottom-section {
+  padding: 40px; /*設定上下左右都有效*/
+  /*margin 只有設定左右有效*/
+  display: flex;
+  justify-content: space-evenly; /*平均分布*/
+}
+.bottom-section span {
+  display: block;
+}
+.border {
+  width: 1px;
+  height: 40px;
+  background-color: #d3dae2;
+  margin-left: 50px;
+  margin-right: 10px;
 }
